--- a/resources/sass/base/_colors.scss
+++ b/resources/sass/base/_colors.scss
@@ -11,3 +11,13 @@ $color-black: #0a0909;
 $color-dark: #121212;
 $color-error: #d32f2f;
 $color-dyslexia-accent: #007bff;
+
+$color-dark-elevation-1: #1e1e1e;
+$color-dark-elevation-2: #232323;
+$color-dark-elevation-3: #252525;
+$color-dark-elevation-4: #272727;
+$color-dark-elevation-5: #2c2c2c;
+$color-dark-elevation-6: #2f2f2f;
+$color-dark-elevation-7: #333333;
+$color-dark-elevation-8: #353535;
+$color-dark-elevation-9: #383838;
