--- a/resources/sass/components/_articles.scss
+++ b/resources/sass/components/_articles.scss
@@ -28,7 +28,7 @@
             bottom: 0;
             right: 0;
             width: calc(100% + 0.5em);
-            border-bottom: 0.1em solid $color-dark;
+            border-bottom: 0.1em solid $color-black;
         }
     }
 }
