--- a/resources/sass/pages/_contact.scss
+++ b/resources/sass/pages/_contact.scss
@@ -60,3 +60,13 @@ section#contact {
         }
     }
 }
+
+html.darkmode {
+    section#contact {
+        .right {
+            form {
+                background: $color-dark-elevation-3;
+            }
+        }
+    }
+}
