--- a/resources/sass/base/_darkmode.scss
+++ b/resources/sass/base/_darkmode.scss
@@ -16,16 +16,9 @@
 //     }
 // }
 
-html.dark {
-    $color-primary: #5a07ff;
-    $color-primary-dark: #2c00f1;
-    $color-primary-light: #b896ff;
-    $color-secondary: #acff07;
-    $color-secondary-dark: #96d400;
-    $color-secondary-light: #d6ff9a;
-    $color-white: #0a0909;
-    $color-light: #121212;
-    $color-black: #ffffff;
-    $color-dark: #eaeaea;
-    $color-error: #d32f2f;
+html.darkmode {
+    body {
+        background: $color-dark;
+        color: $color-light;
+    }
 }
