--- a/resources/sass/base/_reset.scss
+++ b/resources/sass/base/_reset.scss
@@ -42,6 +42,12 @@ button {
     cursor: pointer;
     outline: none;
 }
+input:-webkit-autofill,
+input:-webkit-autofill:focus {
+    transition:
+        background-color 600000s 0s,
+        color 600000s 0s;
+}
 
 /* Reset for select element */
 select {
