--- a/resources/sass/components/_buttons.scss
+++ b/resources/sass/components/_buttons.scss
@@ -74,3 +74,61 @@
         }
     }
 }
+
+html.darkmode {
+    .button {
+        &--contained {
+            background-color: $color-primary-light;
+            color: $color-white;
+
+            &:focus,
+            &:hover {
+                background-color: $color-primary;
+            }
+
+            &.cta {
+                background-color: $color-secondary-light;
+                color: $color-dark;
+
+                &:focus,
+                &:hover {
+                    background-color: $color-secondary;
+                }
+            }
+        }
+
+        &--outline {
+            border: 1px solid rgba($color-primary-light, 0.5);
+            color: $color-primary-light;
+
+            &:focus,
+            &:hover {
+                background-color: $color-dark-elevation-1;
+                border: 1px solid $color-primary-light;
+            }
+
+            &.cta {
+                border: 1px solid rgba($color-secondary-light, 0.5);
+                color: $color-secondary-light;
+
+                &:focus,
+                &:hover {
+                    border: 1px solid $color-secondary-light;
+                }
+            }
+        }
+
+        &--text {
+            color: $color-primary-light;
+
+            &:focus,
+            &:hover {
+                background-color: $color-dark-elevation-1;
+            }
+
+            &.cta {
+                color: $color-secondary-light;
+            }
+        }
+    }
+}
