--- a/resources/sass/pages/_projects.scss
+++ b/resources/sass/pages/_projects.scss
@@ -1,10 +1,16 @@
 .tabset {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
+    display: grid;
+    grid-template-areas:
+        "banner banner banner"
+        "menu menu menu"
+        "content content content"
+        "footer footer footer";
+    grid-auto-columns: 1fr;
+    grid-template-rows: auto auto 1fr auto;
+    grid-gap: 1em;
 
     .nav-tabs {
-        width: 100%;
+        grid-area: menu;
 
         ul {
             display: grid;
@@ -34,33 +40,40 @@
     }
 
     .tab-panels {
-        flex: 1;
+        display: contents;
 
         .tab-panel {
             display: none;
             grid-template-rows: max-content;
             grid-template-columns: 100%;
-            grid-template-areas:
-                "banner"
-                "content"
-                "footer";
 
             height: 100%;
 
             &.active {
-                display: grid;
+                display: contents;
             }
 
             .tab-panel__banner {
                 grid-area: banner;
+                margin-bottom: -1em;
 
-                img {
-                    width: 100%;
+                picture {
+                    display: flex;
+
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                    }
                 }
             }
 
             .tab-panel__content {
                 grid-area: content;
+
+                h2 {
+                    font-size: clamp(2em, 3vw, 3.25em);
+                }
             }
 
             .tab-panel__footer {
@@ -73,7 +86,7 @@
 
                     li {
                         display: inline-block;
-                        background-color: rgba($color-light, 0.25);
+                        background-color: rgba($color-black, 0.25);
                         padding: 5px 10px;
                         margin: 5px;
                         border-radius: 4px;
@@ -88,10 +101,7 @@
     .tabset {
         .nav-tabs {
             ul {
-                display: flex;
-                li {
-                    flex: 1;
-                }
+                grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
             }
         }
     }
@@ -99,27 +109,16 @@
 
 @media #{$mq-md} {
     .tabset {
-        flex-direction: row-reverse;
-
-        .nav-tabs {
-            width: 21.4%;
-
-            ul {
-                flex-direction: column;
-            }
-        }
+        grid-template-areas:
+            "banner banner banner"
+            "menu menu menu"
+            "footer content content";
+        grid-auto-columns: 1fr;
+        grid-template-columns: minmax(23.6%, max-content);
+        grid-template-rows: auto auto 1fr;
 
         .tab-panels {
-            width: 78.6%;
-
             .tab-panel {
-                grid-template-rows: auto 1fr;
-                grid-template-columns: minmax(21.4%, max-content) 1fr;
-                grid-template-areas:
-                    "banner banner banner"
-                    "footer content content";
-                grid-gap: 1em;
-
                 .tab-panel__footer {
                     .skills {
                         flex-direction: column;
@@ -139,13 +138,43 @@
         }
 
         .tab-panels {
-            width: 78.6%;
-
             .tab-panel {
                 display: block;
 
                 .tab-panel__banner {
                     display: none;
+                }
+            }
+        }
+    }
+}
+
+html.darkmode {
+    .tabset {
+        .nav-tabs {
+            ul {
+                li {
+                    background: $color-primary-light;
+                    color: $color-dark;
+
+                    label {
+                        &:hover {
+                            background: $color-primary;
+                            color: $color-light;
+                        }
+                    }
+                }
+            }
+        }
+
+        .tab-panels {
+            .tab-panel {
+                .tab-panel__footer {
+                    .skills {
+                        li {
+                            background-color: $color-dark-elevation-2;
+                        }
+                    }
                 }
             }
         }
