--- a/resources/sass/components/_buttons.scss
+++ b/resources/sass/components/_buttons.scss
@@ -79,11 +79,12 @@ html.darkmode {
     .button {
         &--contained {
             background-color: $color-primary-light;
-            color: $color-white;
+            color: $color-dark;
 
             &:focus,
             &:hover {
                 background-color: $color-primary;
+                color: $color-white;
             }
 
             &.cta {
