--- a/resources/sass/components/_switch.scss
+++ b/resources/sass/components/_switch.scss
@@ -38,3 +38,21 @@
         }
     }
 }
+
+html.darkmode {
+    .switch {
+        input {
+            &:checked + .slider {
+                background-color: $color-primary-light;
+            }
+        }
+
+        .slider {
+            background-color: $color-dark-elevation-2;
+
+            &::before {
+                background-color: $color-dark-elevation-5;
+            }
+        }
+    }
+}
