--- a/resources/sass/components/_buttons.scss
+++ b/resources/sass/components/_buttons.scss
@@ -11,6 +11,8 @@
     text-decoration: none;
     border-radius: $border-radius;
     transition: background-color 0.3s ease;
+    height: fit-content;
+    min-width: fit-content;
 
     &--contained {
         background-color: $color-primary;
