--- a/resources/sass/layouts/_footer.scss
+++ b/resources/sass/layouts/_footer.scss
@@ -7,7 +7,13 @@
 
 html.darkmode {
     .page-footer {
-        background: $color-dark-elevation-9;
+        background: $color-dark-elevation-7;
         color: $color-primary-light;
+    }
+}
+
+@media print {
+    .page-footer {
+        color: #000000;
     }
 }
